--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,28 @@
-flickCalculator.xcodeproj/project.xcworkspace/xcuserdata/dave.xcuserdatad/UserInterfaceState.xcuserstate
+# OS X temporary files
+.DS_Store
+*.swp
+*.lock
+profile
+
+# Xcode temporary files
+*~.nib
+
+# Xcode build files
+#   slash on the end, so we only remove the folder
+DerivedData/
+build/
+
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata
+*.xccheckout
+*.moved-aside
+*.hmap
+*.ipa
+*.xcuserstate
