--- a/flickCalculator/flickCalculator-Info.plist
+++ b/flickCalculator/flickCalculator-Info.plist
@@ -24,7 +24,7 @@
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
-	<string>edu.tufts.cs.enmingwu.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.enmingwu.$(PRODUCT_NAME:rfc1034identifier)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
